# bewise_test

./: .gitignore  README.md  build.sh  docker-compose.yml  run_migration.sh
src/: .env_example  Dockerfile  main.py  pyproject.toml
src/migration/: env.py
src/models/: questions.py  users.py
src/routers/: routers.py
src/schemas/: schemas.py
src/utils/: db.py  questions.py  users.py
